# F446_ProtoBufDevice

./: .env  .gitignore  .gitmodules  27_burst_resistance.csv  CMakeLists.txt  README.md  flash.bat  fw.ps1  fw.py  generate_source_files.bat  setup.bat  stlink_probe.bat
TOOLS/: fw.ps1
TOOLS/GatewayController/: cli.py  data_store.py  gateway.py  main.py  radio_config.py  requirements.txt  serial_connector.py  serial_protocol.py
TOOLS/GatewayController/data/: devices.json
TOOLS/GatewayController/protobuf/: device_messages_pb2.py  uart_messages_pb2.py
TOOLS/GatewayController/utils/: nickname.py  protocol.py
TOOLS/dotnet/: DeviceMessages.cs  UartMessages.cs
cmake/: binutils-arm-none-eabi.cmake  gdb-helper.cmake  launch.json.in  stm32f4.cmake  toolchain-arm-none-eabi.cmake
cmake/settings/: cmake-settings.local.cmake.in  json-macro.cmake  settings-generator.cmake
data_rlnc/: README.md
proto/: device_messages.proto  lora_device_messages.proto  uart_control_messages.proto  uart_device_messages.proto  uart_messages.proto
proto/shared/: experiment_config.proto  firmware.proto  lora_config.proto  lora_phy.proto
src/: CMakeLists.txt
src/apps/LoRaMac/: CMakeLists.txt
src/apps/RFTest/: CMakeLists.txt
src/apps/RFTest/NucleoF446/: cli_commands.h  rx.cpp  tx.h  utils.cpp
src/apps/RFTest/NucleoWL55/: .gitignore  cli.h  main.cpp  rx.h  tx.cpp  utils.h
src/apps/ping-pong/: CMakeLists.txt  test.cfg  test_copy.cfg
src/apps/ping-pong/NucleoF446/: cli.cpp  cli.h  config.h  main.c  main.cpp  rx.cpp  (+25 more)
src/boards/: board.h  eeprom-board.h  utilities.h
src/boards/B-L072Z-LRWAN1/: CMakeLists.txt  board.c  eeprom-board.c  uart-board.c
src/boards/NAMote72/: adc-board.c  board.c  i2c-board.c  rtc-board.c  uart-board.c
src/boards/NucleoF446/: CMakeLists.txt  adc-board.c  board-config.h  board.c  board.cpp  delay-board.c  eeprom-board-reference.c  eeprom-board.c  eeprom-board3.c  eeprom-conf-reference.h  eeprom-conf.h  gpio-board.c  i2c-board.c  sx1261mbxbas-board.c  sysIrqHandlers.c  sysIrqHandlers.h  uart-board.c
src/boards/NucleoL073/: CMakeLists.txt  adc-board.c  board.c  i2c-board.c  rtc-board.c  spi-board.c  sx1262mbxcas-board.c
src/boards/NucleoL152/: CMakeLists.txt  board.c  gpio-board.c  uart-board.c
src/boards/NucleoL476/: CMakeLists.txt  adc-board.c  board.c  eeprom-board.c  gpio-board.c  i2c-board.c  rtc-board.c  spi-board.c  sx1262mbxdas-board.c  uart-board.c
src/boards/NucleoWL55/: CMakeLists.txt  adc-board.c  board.cpp  delay-board.c  gpio-board.c  i2c-board.c  lpm-board.c  radio_conf.h  rtc-board.c  spi-board.c  stm32wlxx_hal_conf.h  sys_debug.h  uart-board.c
src/boards/NucleoWL55/conf/: radio_conf.h
src/boards/SAMR34/: eeprom-board.c  gpio-board.c  rtc-board.c
src/boards/SKiM880B/: eeprom-board.c
src/boards/SKiM881AXL/: board.c  uart-board.c
src/boards/SKiM980A/: adc-board.c  board.c  eeprom-board.c  spi-board.c  uart-board.c
src/boards/stm32/: utilities.c
src/peripherals/: CMakeLists.txt
src/peripherals/TSL2561/: TSL2561.cpp  TSL2561.h
src/peripherals/bme68x/: bme688.cpp  bme688.h  bme68x.cpp  bme68x.h  bme68x_common.cpp  bme68x_common.h  bme68x_defs.h
src/peripherals/decoding/: Crc8.cpp  Crc8.h  GaloisField.cpp  GaloisField.h  GaloisFieldElement.cpp  GaloisFieldElement.h  GaloisFieldPolynomial.cpp  GaloisFieldPolynomial.h  GaloisProto.cpp  LCG.h  LinearFeedbackShiftRegister.cpp  LinearFeedbackShiftRegister.h  Makefile  XoShiro.h  rlnc_decoder.cpp  rlnc_decoder.h
src/peripherals/decoding/tests/: GFPDerivTest.cpp  GaloisFieldOut.cpp  GaloisFieldTest.cpp  GaloisShiftProto.cpp
src/peripherals/tsl2561/: tsl2561.cpp  tsl2561.h
src/protobuf/: CMakeLists.txt  ProtoReadBuffer.cpp  ProtoReadBuffer.h  ProtoWriteBuffer.cpp  ProtoWriteBuffer.h  UartReadBuffer.cpp  UartReadBuffer.h  UartWriteBuffer.cpp  UartWriteBuffer.h  device_messages.h  lora_config.h  lora_device_messages.h  test.h  uart_control_messages.h  uart_device_messages.h  uart_messages.h
src/protobuf/shared/: experiment_config.h  firmware.h  lora_config.h  lora_phy.h
src/radio/: CMakeLists.txt  radio.h  radio_config.h
src/system/: CMakeLists.txt  COBS.h  fifo.c  fifo.h  i2c.h  nvmm.c  nvmm.cpp  nvmm.h
tools/: B4W-LoRa.ipynb  flash.bat  generate_source_files.ps1  param_calc.py  plot_binomial.py  stlink_dataset_convert.py  stlink_flash_convert.py  stlink_flash_rlnc_conf.py  stlink_probe.bat  stlink_read.bat
tools/GatewayController/: cli.py  data_store.py  main.py  radio_config.py  serial_protocol.py
tools/GatewayController/data/: devices.json
tools/GatewayController/protobuf/: device_messages.h  device_messages_pb2.py  lora_device_messages.h  lora_device_messages_pb2.py  uart_messages.h  uart_messages_pb2.py
tools/GatewayController/utils/: protocol.py
tools/dotnet/: DeviceMessages.cs  UartMessages.cs
tools/gfield/: galois_test.py
tools/range_test/drive-download-20220520T094508Z-001/: VALIDATION_experiment_phy_2022-05-07_11-43-07.csv
tools/rlnc_prob/: 10_rlnc_theory.csv  20_gen_0_2PER.csv  21_experiment_filtered_gen_updates.csv  21_experiment_model.csv  21_output.csv  21_rlnc_vs_model.py  21b_output.csv  24_timeseries_burst.csv  24_timeseries_burst_Err_0.012_Sim_0.912_SS_0.924.md  24_timeseries_burst_worse.csv  26_burst_durations.csv  26_burst_durations_worse.csv  27_README.md  27_burst_resistance.csv  27_burst_resistance100.csv  27_burst_resistance300.csv  27_burst_resistance_-4.csv  27_burst_resistance_-5.csv  27_burst_resistance_-5_0_250.csv  27_burst_resistance_PER40.csv  27_burst_resistance_PER60.csv  6_lora_toa.csv  hist_20PER.py  hist_allPER.py  plot_bike.py  plot_binomial.py  plot_fuota_binomial.py  plot_ldpc.py  plot_toa.py  rlnc_binomial_alldevices.py  rlnc_burstloss.py  rlnc_burstloss_pmf_histos.py  rlnc_burstloss_sim.py  rlnc_decoding_matrix_size.py  rlnc_ff_precision.py  rlnc_fuota_binomial.py  rlnc_fuota_burstloss.py  rlnc_per_analysis.py  rlnc_per_model_fit.py  rlnc_per_real_vs_model.py  (+3 more)
tools/rlnc_prob/burst_comparison_300gen_delta3/: 27_burst_resistance.csv
tools/test/: stats.py
tools/tests/: log_matrix_convert.py  proposed_plots.py
(+44 files in other folders)
